# telemetry

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  codes.txt  docker-compose.yml
.github/workflows/: ci.yml
client/: CMakeLists.txt  main.cpp  udp_client.cpp  udp_client.hpp
common/: CMakeLists.txt  network_utils.hpp  protocol.cpp  protocol.hpp
server/: CMakeLists.txt  data_validator.cpp  data_validator.hpp  limits.json  main.cpp  thread_pool.cpp  thread_pool.hpp  udp_server.cpp  udp_server.hpp
tests/: CMakeLists.txt
tests/functional_tests/: CMakeLists.txt  functional_tests.cpp
tests/functional_tests/test_data/: invalid_data_input.txt  valid_data_input.txt
tests/functional_tests/test_scripts/: run_client.sh
tests/unit_tests/: CMakeLists.txt  unit_tests.cpp
